[tool.poetry]
name = "mlopszoomcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
fastparquet = "^2023.4.0"
mlflow = "^2.3.2"
optuna = "^3.2.0"
prefect = "^2.10.13"
xgboost = "^1.7.5"
prefect-aws = "^0.3.4"
evidently = "^0.3.3"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"


[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
